# H-DiF

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
config/: probe_cap8.yaml  probe_obj110.yaml  probe_obj30.yaml  rectified_flow.yaml  run3_blend.yaml  run4_200k.yaml  sd_v1_signal.yaml  sd_v2_full.yaml  sweep_a45.yaml  sweep_a55.yaml
docs/: ROADMAP.md  RUNS.md
docs/research/: PLAN.md
scripts/: launch_sd.sh  launch_train.sh  prepare_data.py  run_probes.sh  run_sweep.sh  zeroshot_edit_probe.py
src/: eval_metrics.py  inference.py  train.py
src/data/: paired.py
src/flow/: rectified.py
src/models/: build.py  hdit.py
src/sampling/: ode.py
src/sd/: train_controlnet.py
src/temporal/: cache.py  raft.py
tests/temporal/: test_cache.py  test_gamma_throttle.py
tests/unit/: test_flow.py  test_sd_controlnet.py  test_shapes.py  test_train.py
