[project]
name = "h-dif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub>=1.22.0",
    "k-diffusion",
    "lpips>=0.1.4",
    "opencv-python-headless>=4.11.0.86",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "scikit-image>=0.26.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "wandb>=0.28.0",
]

[tool.uv.sources]
k-diffusion = { git = "https://github.com/crowsonkb/k-diffusion.git", rev = "4601bf085320592473f681a62808ed873d17fad5" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
