[project]
name = "h-dif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.32",
    "einops>=0.8.2",
    "huggingface-hub>=1.22.0",
    "k-diffusion",
    "lpips>=0.1.4",
    "opencv-python-headless>=4.11.0.86",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "scikit-image>=0.26.0",
    "torch>=2.11",
    "torchvision>=0.26",
    "transformers>=4.44",
    "wandb>=0.28.0",
]

[tool.uv.sources]
k-diffusion = { git = "https://github.com/crowsonkb/k-diffusion.git", rev = "4601bf085320592473f681a62808ed873d17fad5" }
# Linux training pods run driver 570.x (CUDA <= 12.8); PyPI's default cu13 wheels
# won't initialize there. macOS keeps PyPI (CPU/MPS) wheels.
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
gpu = [
    "bitsandbytes>=0.45; sys_platform == 'linux'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
